--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -91,7 +91,7 @@ $menu-item-hover-background-color: $black
 $menu-item-active-color: $kaldi-red-invert
 $menu-item-active-background-color:	$kaldi-red-invert
 $menu-list-border-left: 1px solid $kaldi-red-invert
-$menu-label-color: $white-ter
+$menu-label-color: $primary
 
 
 .menu-label
